# revdeq-pytorch

./: .dockerignore  .gitignore  CHANGELOG_TODAY.md  CONTRIBUTING.md  Dockerfile  GITHUB_PUBLISH.md  IMPLEMENTATION_REVIEW.md  LICENSE  NOTEBOOK_REVIEW.md  NOTICE  PUBLISH_CHECKLIST.md  QIITA_ARTICLE.md  README.md  REVIEW.md  docker-compose.yml  inference.py  pyproject.toml  requirements.txt  run_tests.sh  setup_colab.sh  train.py
.github/workflows/: ci.yml
configs/: default.yaml  small_test.yaml
notebooks/: revdeq_colab.ipynb
revdeq/: __init__.py  model.py  solver.py
tests/: __init__.py  test_model.py  test_training.py
